call for a major upgrade

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+*****To be updated according to server 0.4 release *****
  Purpose
 
 Development of a proof of concept of the management of multiple cloud VEEM through a single entry point communicating with the existing VEEM OCCI interfaces.
